Fix spacing

--- a/themes/nica/assets/style/layout/_main.scss
+++ b/themes/nica/assets/style/layout/_main.scss
@@ -19,6 +19,6 @@ main {
   }
 
   @media only print {
-    padding-top: 4rem;
+    padding-top: 3.5rem;
   }
 }
